--- a/Sistema/Facturacion/templates/Facturacion/base.html
+++ b/Sistema/Facturacion/templates/Facturacion/base.html
@@ -37,6 +37,11 @@
     <link href="{%static 'vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css'%}" rel="stylesheet">
     <link href="{%static 'vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css'%}" rel="stylesheet">
     <link href="{%static 'vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css'%}" rel="stylesheet">
+    <!-- FullCalendar -->
+    <link href="{%static 'vendors/fullcalendar/dist/fullcalendar.min.css'%}" rel="stylesheet">
+    <link href="{%static 'vendors/fullcalendar/dist/fullcalendar.print.css'%}" rel="stylesheet" media="print">
+    <!-- bootstrap-daterangepicker -->
+    <link href="{%static 'vendors/bootstrap-daterangepicker/daterangepicker.css'%}" rel="stylesheet">
 
     
 
@@ -86,7 +91,7 @@
                 <li><a><i class="fa fa-users"></i> Clientes <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
                     <li><a href="{% url 'clientes' %}">Crear</a></li>
-                   <li><a href="#">Listar</a></li>
+                   <li><a href="{% url 'clientes_list' %}">Listar</a></li>
                     <!-- <li><a href="#">Proveedores</a></li>
                      <li><a href="#">Form Wizard</a></li>
                     <li><a href="#">Form Upload</a></li>
@@ -96,7 +101,7 @@
                 <li><a><i class="fa fa-briefcase"></i> Productos <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
                     <li><a href="{% url 'productos' %}">Crear</a></li>
-                    <li><a href="#">Listar</a></li>
+                    <li><a href="{% url 'productos_list' %}">Listar</a></li>
                     <!-- <li><a href="#">Typography</a></li>
                     <li><a href="#">Icons</a></li>
                     <li><a href="#">Glyphicons</a></li>
@@ -154,24 +159,25 @@
                     <li><a href="#">Pricing Tables</a></li> -->
                   </ul>
                 </li>
-                <!-- <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
+                <li><a><i class="fa fa-sitemap"></i>Herramientas<span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
-                      <li><a href="#">Level One</a>
-                      <li><a>Level One<span class="fa fa-chevron-down"></span></a>
+                      <li><a href="{% url 'calculadora' %}">Calculadora</a>
+                     <!--  <li><a>Level One<span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                          <li class="sub_menu"><a href="#">Level Two</a>
+                          <li class="sub_menu"><a href="#">Calendario</a>
+                          </li>
+                          <li><a href="#">Notas</a>
                           </li>
                           <li><a href="#">Level Two</a>
-                          </li>
-                          <li><a href="#">Level Two</a>
-                          </li>
-                        </ul>
+                          </li> 
+                        </ul>-->
                       </li>
-                      <li><a href="#">Level One</a>
-                      </li>
+                      <li><a href="{% url 'calendario' %}">Calendario</a>
+                      <!-- </li>
+                      <li><a href="#">Notas</a> -->
                   </ul>
                 </li>                  
-                <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+                <!-- <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
               </ul> -->
             </div>
 
@@ -221,6 +227,7 @@
         {% block contenido %}
         <!-- page content -->
          <div class="right_col" role="main">
+          <h2>Sistema de Facturación</h2>
          <!-- <body>-->         
              <div class="content-all"> 
                 <div class="content-carrousel">
@@ -239,9 +246,6 @@
            </div>
         <!-- /page content -->
         {% endblock contenido %}
-     
-    
-
     <!-- jQuery -->
     <script src="{%static 'vendors/jquery/dist/jquery.min.js'%}"></script>
     <!-- Bootstrap -->
@@ -279,7 +283,6 @@
     <!-- bootstrap-daterangepicker -->
     <script src="{%static 'vendors/moment/min/moment.min.js'%}"></script>
     <script src="{%static 'vendors/bootstrap-daterangepicker/daterangepicker.js'%}"></script>
-
     <!-- Datatables -->
     <script src="{%static 'vendors/datatables.net/js/jquery.dataTables.min.js'%}"></script>
     <script src="{%static 'vendors/datatables.net-bs/js/dataTables.bootstrap.min.js'%}"></script>
@@ -298,8 +301,8 @@
     <script src="{%static 'vendors/pdfmake/build/vfs_fonts.js'%}"></script>
      <!-- Custom Theme Scripts -->
     <script src="{%static 'build/js/custom.min.js'%}"></script>
-
-    
-	
+     <!-- FullCalendar -->
+    <script src="{%static 'vendors/moment/min/moment.min.js'%}"></script>
+    <script src="{%static 'vendors/fullcalendar/dist/fullcalendar.min.js'%}"></script>
   </body>
 </html>
