--- a/Sistema/Facturacion/templates/Facturacion/administracion/listar_clientes.html
+++ b/Sistema/Facturacion/templates/Facturacion/administracion/listar_clientes.html
@@ -45,24 +45,28 @@
                       <thead>
                         <tr>
                           <th style="width: 1%">#</th>
-                          <th style="width: 20%">Project Name</th>
-                          <th>Team Members</th>
-                          <th>Project Progress</th>
-                          <th>Status</th>
-                          <th style="width: 20%">#Edit</th>
+                          <th style="width: 20%">Cedula/Ruc*</th>
+                          <th>Apellidos</th>
+                          <th>Nombres</th>
+                          <th>Telefono</th>
+                          <th style="width: 20%">Acciones</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td>#</td>
+                          <td>1</td>
                           <td>
-                            <a>Pesamakini Backend UI</a>
+                            <a>110413671</a>
                             <br />
-                            <small>Created 01.01.2015</small>
+                           <!--  <small>Creado 28.12.2018</small> -->
                           </td>
                           <td>
                             <ul class="list-inline">
                               <li>
+                                 <a>Carrion Iyescas</a>
+                               <!--  <img src="images/user.png" class="avatar" alt="Avatar"> -->
+                              </li>
+                             <!--  <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
                               </li>
                               <li>
@@ -70,69 +74,72 @@
                               </li>
                               <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
-                              </li>
-                              <li>
-                                <img src="images/user.png" class="avatar" alt="Avatar">
-                              </li>
+                              </li> -->
                             </ul>
                           </td>
                           <td class="project_progress">
-                            <div class="progress progress_sm">
+                            <!-- <div class="progress progress_sm">
                               <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="57"></div>
-                            </div>
-                            <small>57% Complete</small>
+                            </div> -->
+                             <a>Marcelo Fernando</a>
+                           <!--  <small>57% Complete</small> -->
                           </td>
                           <td>
-                            <button type="button" class="btn btn-success btn-xs">Success</button>
+                             <a>0985025955</a>
+                            <!-- <button type="button" class="btn btn-success btn-xs">Success</button> -->
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>2</td>
                           <td>
-                            <a>Pesamakini Backend UI</a>
+                            <a>1104144561</a>
                             <br />
-                            <small>Created 01.01.2015</small>
+                            <!-- <small>Creado 21.12.2018</small> -->
                           </td>
                           <td>
                             <ul class="list-inline">
                               <li>
-                                <img src="images/user.png" class="avatar" alt="Avatar">
+                                 <a>Accountant</a>
+                                <!-- <img src="images/user.png" class="avatar" alt="Avatar"> -->
                               </li>
-                              <li>
+                              <!-- <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
-                              </li>
+                              </li> -->
                             </ul>
                           </td>
                           <td class="project_progress">
-                            <div class="progress progress_sm">
+                           <!--  <div class="progress progress_sm">
                               <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="47"></div>
-                            </div>
-                            <small>47% Complete</small>
+                            </div> -->
+                             <a>Garrett Winters</a>
+                            <!-- <small>47% Complete</small> -->
                           </td>
                           <td>
-                            <button type="button" class="btn btn-success btn-xs">Success</button>
-                          </td>
+                             <a> 0983512345</a>
+                           <!--  <button type="button" class="btn btn-success btn-xs">Success</button>-->
+                          </td> 
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar</a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>3</td>
                           <td>
-                            <a>Pesamakini Backend UI</a>
+                            <a>1154355623</a>
                             <br />
-                            <small>Created 01.01.2015</small>
+                            <!-- <small>Creat 01.01.2015</small> -->
                           </td>
                           <td>
                             <ul class="list-inline">
-                              <li>
+                              <a>Senior Javascript Developer</a>
+                              <!-- <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
                               </li>
                               <li>
@@ -140,34 +147,39 @@
                               </li>
                               <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
-                              </li>
+                              </li> -->
                             </ul>
                           </td>
                           <td class="project_progress">
-                            <div class="progress progress_sm">
+                            <a>Cedric Kelly</a>
+                            <!-- <div class="progress progress_sm">
                               <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="77"></div>
                             </div>
-                            <small>77% Complete</small>
+                            <small>77% Complete</small> -->
                           </td>
                           <td>
-                            <button type="button" class="btn btn-success btn-xs">Success</button>
+                            <a>09763456129</a>
+                           <!--  <button type="button" class="btn btn-success btn-xs">Success</button> -->
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>4</td>
                           <td>
-                            <a>Pesamakini Backend UI</a>
+                            <a>1276344561</a>
                             <br />
-                            <small>Created 01.01.2015</small>
+
+                            
+                           <!--  <small>Created 01.01.2015</small> -->
                           </td>
                           <td>
                             <ul class="list-inline">
-                              <li>
+                               <a>Junior Technical Author</a>
+                              <!-- <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
                               </li>
                               <li>
@@ -178,26 +190,28 @@
                               </li>
                               <li>
                                 <img src="images/user.png" class="avatar" alt="Avatar">
-                              </li>
+                              </li> -->
                             </ul>
                           </td>
                           <td class="project_progress">
-                            <div class="progress progress_sm">
+                             <a>Ashton Cox</a>
+                           <!--  <div class="progress progress_sm">
                               <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="60"></div>
                             </div>
-                            <small>60% Complete</small>
+                            <small>60% Complete</small> -->
                           </td>
                           <td>
-                            <button type="button" class="btn btn-success btn-xs">Success</button>
+                            <a>0987634567</a>
+                           <!--  <button type="button" class="btn btn-success btn-xs">Success</button> -->
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
-                        <tr>
-                          <td>#</td>
+                        <!-- <tr>
+                          <td>5</td>
                           <td>
                             <a>Pesamakini Backend UI</a>
                             <br />
@@ -226,13 +240,13 @@
                             <button type="button" class="btn btn-success btn-xs">Success</button>
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar</a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>6</td>
                           <td>
                             <a>Pesamakini Backend UI</a>
                             <br />
@@ -264,13 +278,13 @@
                             <button type="button" class="btn btn-success btn-xs">Success</button>
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar</a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>7</td>
                           <td>
                             <a>Pesamakini Backend UI</a>
                             <br />
@@ -296,13 +310,13 @@
                             <button type="button" class="btn btn-success btn-xs">Success</button>
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>8</td>
                           <td>
                             <a>Pesamakini Backend UI</a>
                             <br />
@@ -331,13 +345,13 @@
                             <button type="button" class="btn btn-success btn-xs">Success</button>
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar</a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
+                          <td>9</td>
                           <td>
                             <a>Pesamakini Backend UI</a>
                             <br />
@@ -369,11 +383,11 @@
                             <button type="button" class="btn btn-success btn-xs">Success</button>
                           </td>
                           <td>
-                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
-                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Delete </a>
+                            <a href="#" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Ver </a>
+                            <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Eliminar </a>
                           </td>
-                        </tr>
+                        </tr> -->
                       </tbody>
                     </table>
                     <!-- end project list -->
