--- a/Sistema/Facturacion/templates/Facturacion/base.html
+++ b/Sistema/Facturacion/templates/Facturacion/base.html
@@ -114,7 +114,7 @@
                 <li><a><i class="fa fa-shopping-cart"></i> Facturación <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
                     <li><a href="{% url 'factura_venta' %}">Nueva venta</a></li>
-                    <li><a href="#">Listar</a></li>
+                    <li><a href="{% url 'factura_list' %}">Listar</a></li>
                   </ul>
                 </li>
                 <li><a><i class="fa fa-usd"></i> Creditos <span class="fa fa-chevron-down"></span></a>
